public/css/style.scss
@import "bourbon/bourbon";
@import "neat/neat";
@import "reset.scss";

@import "type.scss";
@import "forms.scss";
@import "colors.scss";


.container {
  @include outer-container;
}

.content-wrapper {
  @include clearfix;
  background-color: $white;
}

.content {
  margin: 25px 50px;
}

.sidebar-pane {
  @include span-columns(4);
  background-color: $well;
  border-right: 1px solid $border;
}

.results-pane {
  @include span-columns(8);
  background-color: #fff;
}

.pane {
  min-height: 740px;
  padding: 16px 0 0;
}

.header {
  @include span-columns(12);
  background-color: #143249;
  color: #fff;
  height: 42px;
}

.nav {
  @include span-columns(3 of 12);
  @include shift(3);
}

.nav ul {
  display: inline;
  list-style: none;
}

.nav ul li{
  padding: 13px 0;
}

.logo {
 @include span-columns(6 of 12);
 font-size: golden-ratio(16px,  0);
 padding: 5px 16px;
}

.logo-img {
 height: 32px;
}


.filterset {
  padding: 7px 0;
}

.filterset-title {
  width: 100%;
  background-color: $well-accent;
  padding: 5px 25px;
  margin-bottom: 10px;

  font-size: modular-scale(16px, 0, 1.25);
  font-weight: 700;
  color: #505050;

  @include box-shadow(0 0 2px rgba(233, 231, 236, 0.5));
}

.title {
  text-transform: uppercase;
}

.results-title {
  font-weight: 300;
}

.result {
  @include span-columns(8 of 8);
  @include omega();
  padding: 16px 0;
  border-bottom: 1px solid $border;
}

.result-desc {
  @include span-columns(6 of 8);
}

.result-actions {
  @include span-columns(2 of 8);
  padding: 0 10px;
}

.result:hover {
  background-color: #F9F9F9;
}

.filterset-options {
  margin: 0 25px;
}

.sidebar-search {
  width: 75%;
}

.price-well {
  margin: 0 auto;
  text-align: center;
}

.price {
  font-size: modular-scale(14px, 2, 1.25);
  color: #B5B5B5;
}

.result-byline {
}

.buy-btn {
  width: 75%;
  display:block;
  margin: 0 auto;
}

.well {
  background-color: $well;
  border: 1px solid $border;
  border-radius: 2px;
  padding: 25px;
  margin-top: 15px;
  margin-bottom: 15px;
}

.content {
  @include span-columns(8);
  @include shift(2);
}

